--- a/Coustamized_VMD_Commands/README
+++ b/Coustamized_VMD_Commands/README
@@ -13,8 +13,17 @@ TCL VMD SCRIPT TO ANALYSE TRAJECTORY and Can be UTILIZED as CUSTAMIZED COMMANDS 
  After Sourcing analysis.tcl script in VMD console, type following
     my_commands show     : List out all available commands from this script.
     --help command_name  : Shows the details of command ,with examples.
-
-
+ 
+===================================================================================================
+TIP OF THE DAY  : keep this analysis.tcl script in a adirectory called vmd_tcl_scripts/
+         mention its path in vmd startup file .vmdrc
+         
+         eg.   source /home/anjibabu/vmd_tcl_scripts/analysis.tcl
+         
+         That's simple, here after when ever you open VMD automatically analysis.tcl will be sorced.
+         So, U can start using these commands as default commands.
+====================================================================================================
+             
   Following analysis can be done by using this script :
 
   Alignment                
@@ -47,10 +56,12 @@ TCL VMD SCRIPT TO ANALYSE TRAJECTORY and Can be UTILIZED as CUSTAMIZED COMMANDS 
 
 AVAILABLE COMMANDS AND DETAILS :
 ======================
+
 1. Command Name  : my_commands show
    PURPOSE       : Shows all available commands written in this script
    USAGE&example : my_commands show
    Here you have to use "show" as fixed argument to see commands list.
+
 
 2.Command name   : --help
    PURPOSE       : Prints the details of any mentioned command
@@ -59,16 +70,19 @@ AVAILABLE COMMANDS AND DETAILS :
    EXAMPLE 2     : --help angle
    Prints the details of commands distance and angle.
 
+
 3.Command Name   : save_pdb 
   PURPOSE        : Writes pdb file for given options
   USAGE          : save_pdb {atomselection} {start_frame} {end_frame} {stride} {molid} {filename}
   EXAMPLE        : save_pdb "protein" 5 100 5 top file.pdb
-  Above example , It will write file.pdb for "protein" from frame 5 to 100 by skipping every 5 frames.
+  It will write file.pdb for "protein" from frame 5 to 100 by skipping every 5 frames.
+
 
 4.Command Name   : align
   PURPOSE        : To align two molecule for given molids 
   USAGE          : align {molid1} {molid2}
   EXAMPLE        : align top 1
+
 
 5.Command Name   : rmsd
   PURPOSE        : Measures Avg.RMSD & std for given selections
@@ -77,17 +91,20 @@ AVAILABLE COMMANDS AND DETAILS :
   OUTPUT         : Generates data into a file "RMSD.dat".
   (IF both the molids are same , RMSD will be calculated by taking zeroth frame as reference)
 
+
 6. Command Name  : distance
    PURPOSE       : Measures Avg Distance & std  for any given 2 atoms
    USAGE         : distance sel1 sel2
    EXAMPLE       : distance "serial 3418" "serial 3415"
    OUTPUT        : Generates data into a file "DISTANCE.dat"
 
+
 7. Command Name  : angle
    PURPOSE       : Measures Avg. angle & std  for any given 3 atoms
    USAGE         : angle "sel1" "sel2" "sel3"
    EXAMPLE       : angle "serial 3418" "serial 3415" "serial 3395"
    OUTPUT        : Generates data into file " ANGLE.dat ".
+
 
 8. Command Name  : dihedral
    PURPOSE       : Measures Avg Dihedral angle & std  for any given 4 atoms 
@@ -96,27 +113,33 @@ AVAILABLE COMMANDS AND DETAILS :
    EXAMPLE       : dihedral "index 3417" "index 3414" "index 3411" "index 3394"
    OUTPUT        : Generates data into a file " DIHEDRAL.dat ".
 
+
 9. Command Name  : show_residues
    PURPOSE       : Prints RESID and corresponding RESNAME for given selection and for given frames
-   USAGE         : show_residues sel molid <initial frame>  <final frame>  [INTIAL AND FINAL FRAMES ARE OPTIONAL]
+   USAGE         : show_residues sel molid <initial frame>  <final frame>  
    EXAMPLE       : show_residues "resid 170 to 180" top 0 5
    EXAMPLE1      : show_residues "(not resname WAT) and within 3 of resid 235" 0 5 10
    EXAMPLE2      : show_residues "protein and hydrophobic " top 1 0
    EXAMPLE3      : show_residues "protein and basic" top 
-    " In Example3 frame numbers are optional , if you omits frame numbers it prints all basic residues from zeroth frame"
+    " In Example3 frame numbers are optional ,
+      if you omits frame numbers it prints all basic residues from zeroth frame"
    OUTPUT        : Generates data into a file  "RESNAMES.dat ".
+
 
 10.Command Name  : details
    PURPOSE       : Prints required molecular details for given molid
    USAGE         : details molid
    EXAMPLE       : details 1
    EXAMPLE1      : details top
-   
+
+
  11.Command Name : count_waters
-    PURPOSE      : Prints Avg. No of waters of entire trajectory or for selcted frames which are present around given selection
+    PURPOSE      : Prints Avg. No of waters of entire trajectory or for selcted frames
+                   which are present around given selection
     USAGE        : count_waters "sel" molid start_frame end_frame
     EXAMPLE      : count_waters "within 5 of resid 235" 0 5 10
     OUTPUT       : Generates data into a file "NO-OF-WATERS.dat".
+
 
 12.Command Name  : pbc_box
    PURPOSE       : Sets BOX ON or OFF or shows the size of PBC BOX 
@@ -129,12 +152,13 @@ AVAILABLE COMMANDS AND DETAILS :
    EXAMPLE2      : pbc_box size 
    ( It  prints the size of BOX (values) on Tk console)
 
+
 13.Command Name  : show_interactions
    PURPOSE       : Prints Interactions between given two selections within given DISTANCE cutoff
    USAGE         : show_interactions sel1 sel2 cutoff <start frame> <end frame> 
    EXAMPLE       : show_interactions "protein" "resid 143" 3.0 5 10
    (It prints all interactions within cutoff of 3.0 (A) between protein and resid 143 of all atoms )
-   [OUTPUT FORMAT: index_A resid_A resname_A (atom type A)--- index_B resid_B resname_B (atom type B) -- Distance ]
+   OUTPUT FORMAT: index_A resid_A resname_A (atom type A)- index_B resid_B resname_B (atom type B):  Distance
    ARGUMENTS     :
       sel1       : Any given  atom selction
       sel2       : Any given atom selction
@@ -142,6 +166,7 @@ AVAILABLE COMMANDS AND DETAILS :
       start frame: Starting frame , from here start analysing
       end frame  : Final framme , It stops here
    OUTPUT        : Stores all the information in "INTERACTIONS.dat" file
+
 
 14.Command Name  : contact_map
    PURPOSE       :  Measures all the contacts between given two selections and
@@ -156,6 +181,7 @@ AVAILABLE COMMANDS AND DETAILS :
                    gnuplot >>  replot
    It generates a beautiful CONTACT MAP 3D image.
 
+
 15.Command Name   : count_hbonds
    PURPOSE        : Prints AVG No. of HBonds between given DONOR and ACCEPTOR selections & DIST_cutoff and angle_cutoff
    USAGE          : count_hbonds "Donor_sel1"  "Acceptor_sel2"  distance_cutoff angle_cutoff
@@ -163,6 +189,7 @@ AVAILABLE COMMANDS AND DETAILS :
    OUTPUT         : Stores data in file "HBONDS_COUNT.dat".
    (Which contains Frame vs No.of Hbonds ,You can plot this data as Frames v/s No. of Hbonds)
    NOTE           : It assumes that molis as "top" or zero. It prints AVG HBONDS per FRAME.
+
 
 16.Command Name   : show_hbonds
    PURPOSE        : Prints the all HBonds between given DONOR and ACCEPTOR selections within given distance & angle cutoff.
@@ -172,7 +199,8 @@ AVAILABLE COMMANDS AND DETAILS :
    OUTPUT FORMAT  : index_D resid_D resname_D (type) -- index_A resid_A resname_A(type) --- Distance
    (Prints and Stores data for every Frame ) 
    NOTE           : Always Atomselctons should be DONOR and ACCEPTOR , (not ACCEPTOR and DONOR)
-   
+
+
  17.Command Name  :  HB_occupancy
     PURPOSE       :  Prints only the HBONDS occupancy for given selctions for selected frames
     USAGE         :  HB_occupancy "DONOR_sel1" "ACCEPTOR_sel2" distance_cutoff angle_cutoff <start_frame> <end_frame>
@@ -187,6 +215,7 @@ AVAILABLE COMMANDS AND DETAILS :
      START_FRAME  : Starting Frame Number
      END_FRAME    : End Frame Number
 
+
 18.Command Name   : save_image
    PURPOSE        : Renders a high quality image using Tachyon for currently active frame.
    UASAGE         : save_image {molid} filename
@@ -195,14 +224,20 @@ AVAILABLE COMMANDS AND DETAILS :
    OUTPUT FILES   : filename.dat , filename.dat.tga, filename.dat.jpg
    Above example produces my_image.dat , my_image.dat.tga, & my_image.dat.jpg.
    
+   
  19.Command Name  : save_movie
     PURPOSE       : GENERATES A MOVIE IN  GIF FORMAT FOR GIVEN MOLID & FOR SELECTED FRAMES
     USAGE         : save_movie molid filename <start frame> <end frame> 
    (no extension of filename is required ) 
     EXAMPLE1      : save_movie top my_protein 0 20
     EXAMPLE2      : save_movie 1 drug_protein 20 40
+    EXAMPLE3      : save_movie top my_protein
+    EXAMPLE4      : save_movie 1 drug_protein 30
     OUTPUT        : Example1 Genarates "my_protein.gif" file from zeroth frame to 20th frame.
                   : Example2 generates "drug_protien.gif" file from 20th frame to 40th frame.
+                  : Example3 generates "my_protein.gif" file from zeroth frame to end frame .
+                  : Example4 generates "drug_protein.gif" file from 30th frame to end frame.
+                 
                   
          NOTE : Other Movie formats will be updated soon.
          
