--- a/CLUSTERING_ANALYSIS/README
+++ b/CLUSTERING_ANALYSIS/README
@@ -94,8 +94,9 @@ EXAMPLE OUTPUT of this code looks like this. ( on Tk console)
 
  	  	 $********** ANJI BABU KAPAKAYALA **********$
 
-#========================================================================================================#
-
+#======================================================================================================#												 #
+#                             WRITTEN BY ANJI BABU KAPAKAYALA     	                	       # 
+#======================================================================================================#
 
 
 
