--- a/Coustamized_VMD_Commands/README
+++ b/Coustamized_VMD_Commands/README
@@ -34,6 +34,8 @@ TIP OF THE DAY  :
   Measure  Angle
   Measure Dihedral
   Contact map
+  clustering
+  sasa : solvent accessible surface area 
   Print  Interactions within given cutoff
   Print No. of waters within given cutoff
   Print No. of HBonds within given cutoff
