--- a/CLUSTERING_ANALYSIS/README
+++ b/CLUSTERING_ANALYSIS/README
@@ -1,9 +1,9 @@
 
- TCL VMD SCRIPT TO DO CLUSTER ANALYSIS
+ ##                  TCL VMD SCRIPT TO DO CLUSTER ANALYSIS
 
- Authour : ANJI BABU KAPAKYALA
-           IIT KANPUR, INDIA.
-           (anjibabu480@gmail.com)
+                        Authour : ANJI BABU KAPAKYALA
+                                   IIT KANPUR, INDIA.
+                                 (anjibabu480@gmail.com)
 
  PURPOSE : To do cluster analysis
  USAGE   : source clustering.tcl in VMD Tk console.
